<resources>
    <string name="app_name">I Shot It</string>
    <string name="onboardind_form_username">Enter your @username</string>
    <string name="onboardind_form_phone">Enter your phone number</string>
    <string name="onboardind_form_age">Enter your age</string>
    <string name="onboardind_legals">By continuing, you are accepting our Terms and Conditions</string>
    <string name="onboardind_start_btn">Begin you journey</string>
    <string name="onboardind_illustration">Illustration of young peoples taking a selfie</string>
    <string name="camera_loadingLocation">Loading location…</string>
    <string name="camera_captureBtnDescription">Take a picture</string>
    <string name="camera_loadingInstructions">Loading instructions…</string>
    <string name="validation_enterLifeBtnDescription"><![CDATA[Enter life ->]]></string>
    <string name="validation_loadingInstructions">Loading instructions…</string>
    <string name="validation_loadingLocation">Loading location…</string>
    <string name="my_present_life">My Present Life</string>
    <string name="present_life_go_to_profil">Go to profil</string>
    <string name="logo">Logo</string>
    <string name="history">History</string>
    <string name="my_true_history">My True Past</string>
    <string name="go_to_my_present_life">go_to_my_present_life</string>
    <string name="non_visible" />
    <string name="loading">Loading...</string>
    <string name="view_image_item">view_image_item</string>
    <string name="point_liste">•</string>
    <string name="back">Back</string>
    <string name="my_fake_friends">My fake friends</string>
    <string name="work_in_progress_illustration">Work in progress illustration</string>
    <string name="we_believe_at">We believe, at I Shot It Inc., that a social media truely is one when there is friends to follow. But we do not have the budget to make that happen.</string>
    <string name="work_in_progress">Work in progress...</string>
</resources>