<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/onboarding_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".Onboarding">

    <ImageView
        android:id="@+id/onboarding_illustration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="87dp"
        android:background="@drawable/young_people_taking_a_selfie"
        android:contentDescription="@string/onboardind_illustration"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.2629"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/onboarding_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:background="@drawable/logo_text"
        android:contentDescription="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/onboarding_illustration" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="22dp"
        android:maxWidth="355dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/onboarding_logo">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="22dp"
            android:autofillHints="username"
            android:background="@drawable/input"
            android:hint="@string/onboardind_form_username"
            android:inputType="text"
            android:paddingStart="29dp"
            android:textAppearance="@style/input"
            android:textColorHint="#CCFFFFFF"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="22dp"
            android:autofillHints="phone"
            android:background="@drawable/input"
            android:hint="@string/onboardind_form_phone"
            android:inputType="phone"
            android:paddingStart="29dp"
            android:textAppearance="@style/input"
            android:textColorHint="#CCFFFFFF"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="22dp"
            android:autofillHints="age"
            android:background="@drawable/input"
            android:hint="@string/onboardind_form_age"
            android:inputType="number"
            android:paddingStart="29dp"
            android:textAppearance="@style/input"
            android:textColorHint="#CCFFFFFF"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/onboardind_legals"
            android:textAppearance="@style/onboarding_legals" />

    </LinearLayout>

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="66dp"
        android:background="@drawable/begin_your_journey_btn"
        android:contentDescription="@string/onboardind_start_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>