<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/image_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/header_layout" />

    <LinearLayout
        android:id="@+id/header_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="horizontal">


        <ImageView
            android:id="@+id/back_image_left"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:contentDescription="@string/go_to_my_present_life"
            android:src="@drawable/back" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/center_image"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:contentDescription="@string/logo"
                android:scaleType="centerCrop"
                android:src="@drawable/logo_text" />

            <TextView
                android:id="@+id/text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/my_true_history"
                android:textSize="20sp" />

        </LinearLayout>

        <ImageView
            android:id="@+id/profile_image_right"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:contentDescription="@string/non_visible"
            android:src="@drawable/back"
            android:visibility="invisible" />

    </LinearLayout>

</RelativeLayout>
