<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".Friends">

    <ImageView
        android:id="@+id/onboarding_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/logo_text"
        android:contentDescription="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/friends_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/my_fake_friends"
        android:textAppearance="@style/camera_instructions"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="60dp"
        />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:layout_marginStart="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/back"
        android:contentDescription="@string/back"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/friends_title"
        app:layout_constraintBottom_toTopOf="@+id/donate_now"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="40dp"
        android:layout_marginHorizontal="30dp"
        >

        <ImageView
            android:id="@+id/in_dev"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/in_dev"
            android:contentDescription="@string/work_in_progress_illustration"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <TextView
            android:text="@string/work_in_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/camera_instructions"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/in_dev"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/we_believe_at"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/we_believe_at"
            android:textAppearance="@style/camera_instructions"
            android:layout_marginTop="60dp"
            app:layout_constraintTop_toBottomOf="@+id/in_dev"
            android:gravity="center"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageButton
        android:id="@+id/donate_now"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/donate_now"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="40dp"
        />



</androidx.constraintlayout.widget.ConstraintLayout>